   Replace Spaces by tabs.
   Refactor different document keybindings callback functions into
   cb_func_document_action().
 * src/editor.c:
   Improve scrolling on wrapped lines to avoid having search results on
   wrapped lines but outside of visible lines.
 * src/editor.c:
   Allow symbol auto completion in embedded JavaScript in HTML files
   (closes #1997409).


2008-06-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c, src/utils.c, src/win32.c, src/ui_utils.h, src/build.h,
   src/utils.h, src/keybindings.c, src/printing.c, src/printing.h,
   src/tools.c, src/tools.h, src/project.c, src/encodings.c,
   src/prefs.c, src/dialogs.c, src/dialogs.h, src/navqueue.c,
   src/geanyobject.c, src/plugindata.h, src/navqueue.h,
   src/geanyobject.h, src/geany.h, src/treeviews.c, src/msgwindow.c,
   src/callbacks.c, src/notebook.c, src/treeviews.h, src/msgwindow.h,
   src/callbacks.h, src/notebook.h, src/keyfile.c, src/vte.c,
   src/filetypes.c, src/search.c, src/filetypes.h, src/search.h,
   src/document.c, src/plugins.c, src/document.h, src/main.c,
   src/editor.c, src/symbols.c, src/socket.c, src/editor.h,
   src/symbols.h, src/ui_utils.c, doc/plugins.dox, plugins/export.c,
   plugins/vcdiff.c, plugins/filebrowser.c, plugins/htmlchars.c,
   plugins/autosave.c, plugins/classbuilder.c:
   Merge the document-pointer branch.
   Note: this breaks the plugin API for document functions,
   document signal callbacks, msgwin_msg_add() and navqueue_goto_line().
   Make all DocumentFuncs use a GeanyDocument* instead of an integer
   index, so there's no need to access the documents array or use
   DOC_IDX_VALID() - usually just check for non-NULL.
   Pass a document pointer to the callbacks of all "document-*" signals.
   Add GeanyDocument::index field for use with the documents array.
   Remove DocumentFuncs::get_cur_idx() - use get_current() instead.
   Replace DocumentFuncs::get_n_idx() with get_from_page().