@@ -3325,3 +3325,18 @@ gboolean editor_goto_pos(GeanyDocument *doc, gint pos, gboolean mark)
 }
 
 
+gboolean on_editor_scroll_event(GtkWidget *widget, GdkEventScroll *event, gpointer user_data)
+{
+	/* Handle scroll events if Shift or Alt is pressed and scroll whole pages instead of a
+	 * few lines only, maybe this could/should be done in Scintilla directly */
+	if (event->state & (GDK_MOD1_MASK | GDK_SHIFT_MASK))
+	{
+		GeanyDocument *doc = user_data;
+		sci_cmd(doc->sci, (event->direction == GDK_SCROLL_DOWN) ? SCI_PAGEDOWN : SCI_PAGEUP);
+		return TRUE;
+	}
+
+	return FALSE; /* let Scintilla handle all other cases */
+}
+
+
